# meshtal

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build_tests.yml  documentation.yml  tests.yml
src/: lib.rs  point.rs  posvol.rs  utils.rs  vtk.rs  weights.rs
src/mesh/: core.rs  mod.rs  particle.rs  voxel.rs
src/readers/: meshtal_file.rs  mod.rs  parsers.rs  points_file.rs  posvol_file.rs
tests/: core_formats.rs
